# python-outline

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: lint.yml
docs/: client.rst  conf.py  exceptions.rst  index.rst  install.rst  requirements.txt
examples/: sample.py
outline/: client.py  exceptions.py
